--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "cross-env NODE_ENV=development webpack-dev-server --open --mode development",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --mode production"
+    "serve": "cross-env NODE_ENV=development webpack-dev-server --open",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "compression-webpack-plugin": "^3.1.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
